--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A domain-specific language for filtering log lines",
   "main": "dist/cli.js",
   "bin": {
-    "log-filter": "./dist/cli.js"
+    "log-filter": "dist/cli.js"
   },
   "scripts": {
     "build": "tsc",
@@ -25,7 +25,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KyPython/log-filter-dsl.git"
+    "url": "git+https://github.com/KyPython/log-filter-dsl.git"
   },
   "bugs": {
     "url": "https://github.com/KyPython/log-filter-dsl/issues"
@@ -40,4 +40,3 @@
   },
   "dependencies": {}
 }
-
